CHANGES IN R VERSION 1.3.3.9000:
  MINOR CHANGES:
    * tokenize_noun_ngrams() 함수에 mc.cores 인수를 추가하여 사용자가 연산에 
      사용할 코어를 선택할 수 있도록함 (#32)
      - RStudio Cloud 무료 환경은 CPU 자원으로 Core를 1개만 지원하면서 에러가 
        발생하였는데, mc.cores 인수를 1로 지정하여 에러를 회피할 수 있음


      
CHANGES IN R VERSION 1.3.2:
  BUG FIXES:
    * MS-Windows에서 문자열 조작함수의 에러 발생 오류 수정 
      (#31, thanks to 송치호 선생님)    
      - filter_text()
      - replace_text()
      - concat_text()
      - split_text()
      - remove_text()
    
    
    
CHANGES IN R VERSION 1.3.1:
  NEW FEATURES:
    * KNU Korean Sentiment Dictionary를 이용한 감성분석 (#25)
      - get_polarity()
    * tidytext와 궁합이 맞도록 morpho_mecab() 함수 기능 보완 (#27)
      - as_list 인수 추가      
      
  BUG FIXES:
    * 내장 데이터셋 sentiment_dic의 중복 데이터 제거 (#26)    
    * Text Data Explorer의 조건 선택 후 텍스트 대체의 오류 수정 (#28)    
      
      
      
CHANGES IN R VERSION 1.3.0:
  NEW FEATURES:
    * 토크나이즈한 명사를 묶어서 문서로 만들어주는 함수 (#8)
      - collapse_noun()
    * 한글 명사 n-grams 토크나이저 (#8, #10)
      - tokenize_noun_ngrams()
    * 한글 명사 n-grams 토큰을 tibble에 붙여주는 함수 (#10)
      - unnest_noun_ngrams()
    * Windows에서 기존에 mecab-ko가 설치되어 있을 경우에 경로를 등록하는 함수 (#15)
      - regist_mecab_ko()
    * vignettes 추가 (#2)
      - Explore Docs
      - Morphological Analysis   
      - Manipulate Documents
      - Install bitTA in RStudio Cloud (#20)
    * bitTA 로고 개발 및 등록 (thanks to @statkclee-이광춘, #16)  
      
  BUG FIXES:
    * 대통령 연설문 데이터인 president_speech의 한글 인코딩 오류 수정
    * 병렬처리를 위한 문서의 개수가 코어의 개수보다 작아서, 청크의 개수가 0으로 
      계산되는 오류 해결
      - replace_text()
      - concat_text()
      - remove_text()
      - filter_text()
    * .GlobalEnv에 데이터 프레임 객체가 하나도 없을 경우에 Docs Explorer 구동과 
      동시에 발생하는 에러 수정 (#13)  
    * MS-Windows에서 기존에 mecab-ko가 설치되어 있을 경우에, 이를 인식하지 못하고
      에러가 발생하는 오류 수정 (thanks to Kwangchun Lee, #15)        
    * 인코딩 처리 오류로 morpho_mecab()에서 형태소 분석을 잘못 처리하는 
      문제의 해결 (thanks to @csh01470, #17)    
    * president_speech 도움말의 데이터셋 변수 이름 오류 및 vignettes의 변수 이름