@@ -1,8 +1,8 @@
 Package: bitTA
 Type: Package
 Title: Tools for Text Analytics
-Version: 1.3.3.9001
-Date: 2022-11-28
+Version: 1.3.3.9002
+Date: 2022-12-05
 Description: Tools that support "Natural Language Processing" for text analytics.
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
