@@ -9,6 +9,7 @@ export(get_ngrams)
 export(get_opinion)
 export(get_polarity)
 export(get_spacing)
+export(has_final_consonant)
 export(install_mecab_ko)
 export(morpho_mecab)
 export(regist_mecab_ko)
