@@ -5,6 +5,10 @@ CHANGES IN R VERSION 1.3.3.9000:
       - RStudio Cloud 무료 환경은 CPU 자원으로 Core를 1개만 지원하면서 에러가 
         발생하였는데, mc.cores 인수를 1로 지정하여 에러를 회피할 수 있음
 
+  NEW FEATURES:
+    * 한글의 종성 여부를 체크하는 함수 (#34)
+      - has_final_consonant()
+      
 
       
 CHANGES IN R VERSION 1.3.2:
